--- a/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class='wall-event-message alert alert-info'>
+<div class='wall-event-message alert-info'>
     <img src='/media/images/default_album.jpg' width='32px' height='32px'/>
     <p><% text %></p>
     <h2><% song_name %> <% song_album %> <% song_artist %></h2>
