--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -461,7 +461,7 @@
 			<p class="footer-text-color2" >{% trans "minutes of music have been played" %}</p>
 		</div>
 	<p id="copyright">&copy; Yasound 2012</p>
-  <a href='#' id='scroll-top-container' class='hidden-scroll margin-scroll'>
+  <a href='#' id='scroll-top-container' style='display:none;'>
     <img src="/media/app/images/scroll-top.png">
   </a>
 	</footer>
