updated text for global search

--- a/yaapp/templates/yabase/app/programming/addFromServer.mustache
+++ b/yaapp/templates/yabase/app/programming/addFromServer.mustache
@@ -9,7 +9,7 @@
 </form>
 
 <form class="well form-inline">
-    <input type='text' id='find-fuzzy-input' placeholder='{% trans "Search input" %}'/>
+    <input type='text' id='find-fuzzy-input' placeholder='{% trans "Global search" %}'/>
     <input type='submit' class='yabutton-small' id='find-fuzzy-btn' value='{% trans 'find' %}'/>
 </form>
 
