--- a/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingToolbar.mustache
@@ -1,5 +1,6 @@
 {% load i18n %}
-  <li class="active" id='all'><a href='#'>{% trans "Playlist content" %}</a></li>
+  <li class="active" id='all'><a href='#'>{% trans "Playlist" %}</a></li>
   <li id='add-from-server' ><a href='#'>{% trans "Add from server" %}</a></li>
-  <li id='add-from-desktop' ><a href='#'>{% trans "Upload your music" %}</a></li>
+  <li id='add-from-desktop' ><a href='#'>{% trans "Upload" %}</a></li>
   <li id='import-itunes' ><a href='#'>{% trans "Import from iTunes" %}</a></li>
+  <li id='import-deezer' ><a href='#'>{% trans "Import from deezer" %}</a></li>
