--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -226,6 +226,9 @@
    <script type="text/html" id="importFromItunesTemplate">
       {% include "yabase/app/programming/importFromItunes.mustache" %}
    </script>
+   <script type="text/html" id="importFromDeezerTemplate">
+      {% include "yabase/app/programming/importFromDeezer.mustache" %}
+   </script>
    <script type="text/html" id="programmingUploadTemplate">
       {% include "yabase/app/programming/upload.mustache" %}
    </script>
