added manage library permission on deezer

--- a/yaapp/templates/yabase/app/programming/importFromDeezer.mustache
+++ b/yaapp/templates/yabase/app/programming/importFromDeezer.mustache
@@ -1,2 +1,2 @@
 {% load i18n %}
-<a class='yabutton-large' id='import-btn' target="_blank" href='https://connect.deezer.com/fr/oauth/auth.php?app_id=105641&redirect_uri={{ deezer_redirect_uri|urlencode }}&perms=basic_access,email'>{% trans "Import your playlists" %}</a>
+<a class='yabutton-large' id='import-btn' target="_blank" href='https://connect.deezer.com/fr/oauth/auth.php?app_id=105641&redirect_uri={{ deezer_redirect_uri|urlencode }}&perms=basic_access,email,manage_library'>{% trans "Import your playlists" %}</a>
