--- a/yaapp/templates/yabase/app/login/login.mustache
+++ b/yaapp/templates/yabase/app/login/login.mustache
@@ -1,4 +1,4 @@
-{% load i18n %}
+{{% load i18n %}
 
 <div class='row'>
     <div class='span12 signup-container'>
@@ -6,20 +6,20 @@
         <h3>{% trans 'Login with Facebook or Twitter' %}</h3>
         <div class='signup-btns'>
             <div class="signup-btn-fbk">
-    		    	<a href="{% url socialauth_begin 'facebook' %}?next=/app/" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Login with Facebook' %}</a>
-    	    </div>
-    	    <div class="signup-btn-twitter">
-    		    	<a href="{% url socialauth_begin 'twitter' %}?next=/app/" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
-    	    </div>
-	    </div>
-		<div id="signup-separation-line">&nbsp;</div>
+                    <a href="{% url socialauth_begin 'facebook' %}?next=/app/" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-facebook.png">{% trans 'Login with Facebook' %}</a>
+            </div>
+            <div class="signup-btn-twitter">
+                    <a href="{% url socialauth_begin 'twitter' %}?next=/app/" rel="nofollow"><img src="/media/app/images/sign-up/signup-icon-twitter.png">{% trans 'Login with Twitter' %}</a>
+            </div>
+        </div>
+        <div id="signup-separation-line">&nbsp;</div>
         <h3>{% trans 'Email login' %}</h3>
-	    <form id='login-form' method='post'>{% csrf_token %}
-	        <div id="signup-input">
-	        	<input placeholder="{% trans 'Email' %}" type="email" required="required" name="email">
-	        	<input placeholder="{% trans 'Password' %}"class="right-input" required="required" type="password" name="password">
-	        	<input id="signup-save-btn" type="submit" value="{% trans 'Login' %}" />
-	        </div>
-	    </form>
+        <form id='login-form' method='post'>{% csrf_token %}
+            <div id="signup-input">
+                <input placeholder="{% trans 'Email' %}" type="email" required="required" name="email">
+                <input placeholder="{% trans 'Password' %}"class="right-input" required="required" type="password" name="password">
+                <input id="signup-save-btn" type="submit" value="{% trans 'Login' %}" />
+            </div>
+        </form>
     </div>
 </div>
