--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -227,7 +227,10 @@
       {% include "yabase/app/programming/importFromItunes.mustache" %}
    </script>
    <script type="text/html" id="importFromDeezerTemplate">
-      {% include "yabase/app/programming/importFromDeezer.mustache" %}
+      {% include "yabase/app/programming/deezer/importFromDeezer.mustache" %}
+   </script>
+   <script type="text/html" id="deezerPlaylistCellTemplate">
+      {% include "yabase/app/programming/deezer/playlistCell.mustache" %}
    </script>
    <script type="text/html" id="programmingUploadTemplate">
       {% include "yabase/app/programming/upload.mustache" %}
