wip on deezer integration - now uses javascript sdk

--- a/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
-<a id='import-btn' target="_blank" href='https://connect.deezer.com/fr/oauth/auth.php?app_id=105641&redirect_uri={{ deezer_redirect_uri|urlencode }}&perms=basic_access,email,manage_library'>{% trans "Import your playlists" %}</a>
+<a id='import-btn' href='#'>{% trans "Import your playlists" %}</a>
 
 <div id='deezer-content'>
     <div id='deezer-playlists-container'>
