--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -476,6 +476,15 @@
 </body>
 {% endblock %}
 
+<div id="dz-root"></div>
+<script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+<script>
+  DZ.init({
+    appId  : {{ deezer_app_id }},
+    channelUrl : '{{ deezer_channel_url }}'
+  });
+</script>
+
 <script type="text/javascript">
 // GOOGLE ANALYTICS
   var _gaq = _gaq || [];
