--- a/yaapp/templates/yabase/app/radioCell.html
+++ b/yaapp/templates/yabase/app/radioCell.html
@@ -10,7 +10,7 @@
 
         <div class='mask' style='display:none;'>
             <div class="radio-icon">
-                <img src="/media/images/default_album.jpg" width="36" height="36" alt="Radio Radio Picture"/>
+                <img src="/media/images/default_album.png" width="36" height="36" alt="Radio Radio Picture"/>
             </div>
             <div class="radio-id">
                 <p><span>{% trans "By" %}</span> <% name %></p>
