--- a/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
@@ -1,5 +1,7 @@
 {% load i18n %}
 <td><% title %></td>
+<td><%#album%><% name %><%/album%></td>
+<td><%#artist%><% name %><%/artist%></td>
 <td>
     <button class='yabutton-small details'>{% trans 'details' %}</button
 </td>
