--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -232,6 +232,9 @@
    <script type="text/html" id="deezerPlaylistCellTemplate">
       {% include "yabase/app/programming/deezer/playlistCell.mustache" %}
    </script>
+   <script type="text/html" id="deezerTrackCellTemplate">
+      {% include "yabase/app/programming/deezer/trackCell.mustache" %}
+   </script>
    <script type="text/html" id="programmingUploadTemplate">
       {% include "yabase/app/programming/upload.mustache" %}
    </script>
