--- a/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/trackCell.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <td><% title %></td>
-<td><%#album%><% name %><%/album%></td>
+<td><%#album%><% title %><%/album%></td>
 <td><%#artist%><% name %><%/artist%></td>
 <td>
     <button class='yabutton-small details'>{% trans 'details' %}</button
