--- a/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
+++ b/yaapp/templates/yabase/app/programming/deezer/importFromDeezer.mustache
@@ -16,7 +16,8 @@
         <div class='cell-pagination' id='playlists-pagination'></div>
     </div>
 
-    <div id='deezer-tracks-container'>
+    <div id='deezer-tracks-container' style='display:none;'>
+        <button class='yabutton-small' id='import-all'>{% trans "Import all" %}</button>
         <table class="table table-bordered table-striped">
             <thead>
                 <tr>
