--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -73,6 +73,7 @@
     <script src="/media/blueimp/js/locale.js"></script>
     <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE8+ -->
     <!--[if gte IE 8]><script src="/media/blueimp/js/cors/jquery.xdr-transport.js"></script><![endif]-->
+    <script src="/media/js/load-image.min.js"></script>
 
 
 	<!--[if (gte IE 6)&(lte IE 8)]>
