--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3344,13 +3344,23 @@ ul .radio-with-stats-cells li {
 	margin:0px;
 }
 
+/**
+ * responsive hidden
+ */
+
+ .signup-btns .mobile-social-btn {
+    display:none;
+ }
+
 /* Landscape phones and down */
-@media screen and (max-device-width: 480px)  {
+@media (max-width: 480px)  {
 
 /*-- CONTAINER --*/
 	.container {
-		width:480px;
-	}
+    width:100%;
+    max-width:480px;
+    }
+
 	#results {
 		width:480px;
 	}
@@ -3366,7 +3376,7 @@ ul .radio-with-stats-cells li {
 		display:none;
 	}
     #search-bar{
-
+        display:none;
     }
 
 
@@ -3457,6 +3467,54 @@ ul .radio-with-stats-cells li {
 	.profile-background, .radio-cells {
 		width:480px;
 	}
+
+/*-- SIGNUP --*/
+    .signup-container {
+        width:100%;
+        max-width:480px;
+        height:100%;
+    }
+
+    .signup-container h2 {
+        font-size:28px;
+    }
+
+    .signup-container h3 {
+        font-size: 19px;
+    }
+
+    .signup-container .signup-btn-fbk, .signup-container .signup-btn-twitter {
+        width:80%;
+        margin: 10px 10%;
+    }
+
+    .signup-container #signup-separation-line {
+        margin:20px 0px;
+    }
+
+    .signup-container #signup-input input, .signup-container #signup-input .right-input {
+        width:80%;
+        margin: 10px 0%;
+        padding-left:10px;    
+    }
+
+    .signup-container #signup-input #signup-save-btn {
+        margin-right:2px;
+    }
+
+    .signup-btns .screen-social-btn {
+        display:none;
+    }
+
+    .signup-btns .mobile-social-btn {
+        display:block;
+        text-align:center;
+        margin:0px;
+    }
+
+    .signup-container #signup-input {
+        margin-top:10px;
+    }
 
 /*-- PROFILE --*/
 	.profile-bio {
