--- a/yaapp/templates/yabase/app/login/login.mustache
+++ b/yaapp/templates/yabase/app/login/login.mustache
@@ -3,6 +3,7 @@
 <div class='row'>
     <div class='span12 signup-container'>
         <h2>{% trans "Welcome to Yasound" %}</h2>
+        <h3><a href="#">{% trans 'Not registered yet ? Create an account' %}</a></h3>
         <h3>{% trans 'Login with Facebook or Twitter' %}</h3>
         <div class='signup-btns'>
             <div class="signup-btn-fbk">
@@ -23,5 +24,6 @@
                 <input id="signup-save-btn" type="submit" value="{% trans 'Login' %}" />
             </div>
         </form>
+        <a class='mobile-lost-password'>{% trans 'Lost password ?'}</a>
     </div>
 </div>
