--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -3352,6 +3352,14 @@ ul .radio-with-stats-cells li {
     display:none;
  }
 
+ .signup-container .mobile-lost-password {
+    display:none;
+ }
+
+ .signup-container .mobile-signin-link {
+    display:none;
+ }
+
 /* Landscape phones and down */
 @media (max-width: 480px)  {
 
