--- a/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
+++ b/yaapp/templates/yabase/app/myRadios/myRadiosPage.mustache
@@ -1,9 +1,16 @@
 {% load i18n %}
 <div class='row'>
     <div class='span12'>
-    <ul id='results' class='radio-with-stats-cells'>
-    <img class='loading-mask' src='/media/images/loading.gif'/>
-    </ul>
-    <div class='cell-pagination' id='pagination'></div>
+        <ul id='results' class='radio-with-stats-cells'>
+        <img class='loading-mask' src='/media/images/loading.gif'/>
+        </ul>
+        <div class='cell-pagination' id='pagination'></div>
     </div>
 </div>
+{% if user_profile.permissions.create_radio %}
+<div class='row'>
+    <div class='span12 pagination-centered' id='create-radio-container'>
+        <a class='yabutton-large' id='create-radio-btn' href='{% url webapp_new_radio %}'>{% trans "Create radio" %}</a>
+    </div>
+</div>
+{% endif %}
