upadted with twitter bootstrap responsive and started responsive footer

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -44,9 +44,21 @@ body {
     color:#F85E5E;
 }
 
+#fb-root {
+    display:none;
+}
+
+#webapp-container .container {
+    max-width:940px;
+}
+
 /**
  * Header
  */
+
+ .navbar-inner .container {
+    max-width:940px;
+ }
 
 /*--- LOGIN ---*/
 
@@ -655,6 +667,7 @@ body {
 }
 
 #sub-header-container {
+    max-width:940px; 
     height:55px;
     position:relative;
 }
@@ -2549,12 +2562,14 @@ ul .radio-with-stats-cells li {
  */
 
 .signup-container {
+    max-width:942px;
     height:618px;
     background-image:url('../app/images/sign-up/signup-bg-gradient.png');
     background-repeat:repeat-x;
     border:1px solid #e2e2e2;
     border-radius:5px;
     box-shadow:0px 1px 3px #e2e2e2;
+    margin-right:0px;
 }
 
 .signup-container h2 {
@@ -3363,6 +3378,8 @@ ul .radio-with-stats-cells li {
 /* Landscape phones and down */
 @media (max-width: 480px)  {
 
+/*-- HEADER --*/
+
 /*-- CONTAINER --*/
 	.container {
     width:100%;
@@ -3589,18 +3606,162 @@ ul .radio-with-stats-cells li {
     }
 
 /*-- FOOTER --*/
+
 	#connected-users {
 		display:none;
 	}
+
+    .footer-separation {
+        display:none;
+    }
+    #footer {
+        width:100%;
+        margin-left:-20px;
+        margin-right:-20px;
+    }
 }
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
+    
+    /*-- SIGNUP --*/
+    .signup-container {
+        width:100%;
+        height:100%;
+    }
+
+    .signup-container h2 {
+        font-size:28px;
+        margin:20px 0px;
+    }
+
+    .signup-container h3 {
+        font-size: 19px;
+    }
+
+    .signup-container .signup-btn-fbk, .signup-container .signup-btn-twitter {
+        width:80%;
+        margin: 10px 10%;
+    }
+
+    .signup-container #signup-separation-line {
+        margin:20px 0px;
+    }
+
+    .signup-container #signup-input input, .signup-container #signup-input .right-input {
+        width:80%;
+        margin: 10px 0%;
+        padding-left:10px;    
+    }
+
+    .signup-container #signup-input #signup-save-btn {
+        margin-right:2px;
+    }
+
+    .signup-btns .screen-social-btn {
+        display:none;
+    }
+
+    .signup-btns .mobile-social-btn {
+        display:block;
+        text-align:center;
+        margin:0px;
+    }
+
+    .signup-container #signup-input {
+        margin-top:10px;
+    }
+
+    .signup-container h3 a {
+        display: block;
+        width: 100%;
+        text-align: center;
+        color: #08C;
+        font-size: 19px;
+        font-weight: normal;
+        margin:10px 0px;
+        line-height:30px;
+    }
+
+    .signup-container .mobile-lost-password {
+        width:100%;
+        text-align:center;
+        text-decoration: underline;
+        color:#7C7C7C;
+        margin:0px;
+    }
 
 }
 
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
+    
+    /*-- SIGNUP --*/
+    .signup-container {
+        width:100%;
+        height:100%;
+    }
+
+    .signup-container h2 {
+        font-size:28px;
+        margin:20px 0px;
+    }
+
+    .signup-container h3 {
+        font-size: 19px;
+    }
+
+    .signup-container .signup-btn-fbk, .signup-container .signup-btn-twitter {
+        width:80%;
+        margin: 10px 10%;
+    }
+
+    .signup-container #signup-separation-line {
+        margin:20px 0px;
+    }
+
+    .signup-container #signup-input input, .signup-container #signup-input .right-input {
+        width:80%;
+        margin: 10px 0%;
+        padding-left:10px;    
+    }
+
+    .signup-container #signup-input #signup-save-btn {
+        margin-right:2px;
+    }
+
+    .signup-btns .screen-social-btn {
+        display:none;
+    }
+
+    .signup-btns .mobile-social-btn {
+        display:block;
+        text-align:center;
+        margin:0px;
+    }
+
+    .signup-container #signup-input {
+        margin-top:10px;
+    }
+
+    .signup-container h3 a {
+        display: block;
+        width: 100%;
+        text-align: center;
+        color: #08C;
+        font-size: 19px;
+        font-weight: normal;
+        margin:10px 0px;
+        line-height:30px;
+    }
+
+    .signup-container .mobile-lost-password {
+        width:100%;
+        text-align:center;
+        text-decoration: underline;
+        color:#7C7C7C;
+        margin:0px;
+    }
 
 }
 
