--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -14,7 +14,7 @@
     <img class='loading-mask' src='/media/images/loading-white.gif'/>
     </ul>
     </div>
-    <div id='pagination'></div>
+    <div id='pagination-wall'></div>
 </div>
 
 <div class="modal hide fade" id="modal-report-abuse">
