--- a/yaapp/templates/yabase/song.html
+++ b/yaapp/templates/yabase/song.html
@@ -56,7 +56,7 @@
            <div id="radio">
                <div id='radio-picture' class='thumbnail'>
                    {% if radio.picture %}
-                   {% thumbnail radio.picture "210x210" format='PNG' as im %}
+                   {% thumbnail radio.picture "210x210" format='PNG' crop='center' as im %}
                    <img src="{{ im.url }}" width="210px" height="210px" alt='{% trans "Radio logo" %}'/>
                    {% endthumbnail %}
                    {% else %}
