added hyperlink on notifications (html attribute in json)

--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -3,5 +3,5 @@
 	<div class='<% type %>'></div>
 	<a class="close-icon" data-dismiss="alert" href="#"></a>
 	<div class='date'><% formatted_date %></div>
-	<div class='<%#read%>read<%/read%> text-notification'><% text %></div>
+	<div class='<%#read%>read<%/read%> text-notification'><%#html%><%{html %><%/html%><%^html%><% text %><%/html%></div>
 </div>
