--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -1,13 +1,13 @@
 {% load i18n %}
 {% if request.user.is_authenticated %}
-<div class='span12'>
+<div class=''>
     <ul id='results'>
     <img class='loading-mask' src='/media/images/loading.gif'/>
     </ul>
     <div class='cell-pagination' id='pagination'></div>
 </div>
 {% else %}
-<div class='span12 no-margin'>
+<div class='no-margin'>
 	<div class='friends-login-container'>
 		<img src="/media/app/images/friends-icon-large.png">
 		<p class='friends-login-p'>{% trans "Log in to view your friends." %}</p>
