removed layout larger than 1200px on bootstrap-responsive.css
the max width is 940px and this css file override this value

--- a/yaapp/media/bootstrap/css/bootstrap-responsive.css
+++ b/yaapp/media/bootstrap/css/bootstrap-responsive.css
@@ -434,7 +434,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+/*@media (min-width: 1200px) {
   .row {
     margin-left: -30px;
     *zoom: 1;
@@ -677,7 +677,7 @@
   .row-fluid .thumbnails {
     margin-left: 0;
   }
-}
+}*/
 
 @media (max-width: 979px) {
   body {
