--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -7,14 +7,14 @@
 <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# yasoundev: http://ogp.me/ns/fb/yasoundev#">
     <title>{% block head_title %}Yasound{% endblock %}</title>
     <link rel="icon" type="image/png" href="/media/app/images/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Avec Yasound, créez votre radio en un instant, écoutez la musique avec vos amis, et communiquez avec eux en temps réel." />
     <meta name="Author" content="Yasound SAS" />
     <meta name="copyright" content="Yasound SAS" />
     <meta http-equiv="Cache-control" content="public" />
     <meta name="language" content="french" />
     <link rel="stylesheet" href="/media/bootstrap/css/bootstrap.min.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/media/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="/media/bootstrap/css/bootstrap-responsive.css">
 
 <!--[if lt IE 9]>
 <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
