removed max-width-span4 on radio page otherwise the span8 is not right aligned with other elements

--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div class='row'>
-<div class='span4 max-width-span4'>
+<div class='span4'>
     <div id='webapp-track'></div>
     <div id='webapp-radio'></div>
     <div class='well'>
