added "broadcast to fan" function on webpage

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1850,6 +1850,10 @@ input::-webkit-input-placeholder {
     display:none;
 }
 
+#modal-broadcast .modal-body textarea {
+    width: 100%;
+}
+
 /**
  * User cell
  */
