--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -47,5 +47,19 @@
     </div>
 </div>
 
+<div class="modal hide fade" id="modal-broadcast">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Broadcast message to your fans" %}</h3>
+    </div>
+    <div class="modal-body">
+        <textarea placeholder="{% trans 'Your message' %}"></textarea>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "Dismiss" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Send now" %}</a>
+    </div>
+</div>
+
 </div>
 
